<resources>
    <string name="app_name">BIW</string>
    <string name="language_cn">简体中文</string>
    <string name="language_en">ENGLISH</string>
    <string name="pwd_check_login">登录</string>
    <string name="pwd_check_chanage_account">切换账户</string>
    <string name="pwd_check_title">密码验证</string>
    <string name="copy_bord_content">已复制剪切板</string>
    <string name="load_wallet_by_mnemonic_input_tip">请检查您的助记词</string>
    <string name="load_wallet_already_exist">钱包已存在</string>
    <string name="create_wallet_pwd_confirm_input_tips">密码不一致，请重新输入</string>
    <string name="account_name_notice">账号不能为空</string>
    <string name="pwd_check_wrong_pwd">密码错误</string>
    <string name="pwd_check_input_pwd">请输入密码</string>
    <string name="xmain_table_one">资产</string>
    <string name="xmain_table_two">发现</string>
    <string name="xmain_table_three">交易</string>
    <string name="xmain_table_four">我的</string>
    <string name="xmain_table_shouye">首页</string>
    <string name="mine_manage_wallet">管理钱包</string>
    <string name="mine_trade_list">转账记录</string>
    <string name="mine_msg_center">消息中心</string>
    <string name="mine_contact_people">联系人</string>
    <string name="mine_system_set">系统设置</string>
    <string name="mine_help_center">帮助中心</string>
    <string name="mine_about_us">关于我们</string>
    <string name="mine_system_adress_peo">地址簿</string>
    <string name="trade_list_remark">最近交易记录</string>
    <string name="trade_list_zhuanzhang">转账</string>
    <string name="trade_list_shoukuan">收款</string>
    <string name="trade_list_title">转账记录</string>
    <string name="history_weituo_title">历史委托</string>
    <string name="trade_detail_title">交易记录</string>
    <string name="trade_detail_no_data">暂无</string>
    <string name="trade_detail_fakuan">发款方</string>
    <string name="trade_detail_shoukuan">收款方</string>
    <string name="trade_detail_kuangongfei">矿工费用</string>
    <string name="trade_detail_beizhu">备注</string>
    <string name="trade_detail_beizhu_two">请输入备注</string>
    <string name="trade_detail_jiaoyihao">交易号</string>
    <string name="trade_detail_qukuai">区块</string>
    <string name="trade_detail_jiaoyitime">交易时间</string>
    <string name="trade_detail_copyurl">复制</string>
    <string name="trade_detail_bvw_remark">请输入备注内容</string>
    <string name="account_manage_title">管理钱包</string>
    <string name="account_manage_import_wallet">导入钱包</string>
    <string name="wallet_detail_name">的钱包</string>
    <string name="wallet_detail_name_sign">钱包名</string>
    <string name="wallet_detail_update_pwd">修改密码</string>
    <string name="wallet_detail_export_store">导出私钥</string>
    <string name="wallet_detail_export_keystore">导出Keystore</string>
    <string name="wallet_detail_del_wallet">删除钱包</string>
    <string name="empty_pwd">密码值不能为空</string>
    <string name="pwd_not_encough">密码太简单,不能低于六位数</string>
    <string name="update_success">修改成功</string>
    <string name="update">修改中</string>
    <string name="private_key_put_pwd">请输入密码</string>
    <string name="private_key_sign">私钥</string>
    <string name="jiexi_private_key">解析私钥</string>
    <string name="private_key_jiexie_input">请输入密码，点击 解析私钥 按钮</string>
    <string name="private_key_notice">为保证安全，请尽量在断网的情况下进行此操作!</string>
    <string name="wrong_pwd">密码错误</string>
    <string name="long_click_copy_content">长按可复制文本</string>
    <string name="export_key_title">导出Keystore</string>
    <string name="export_key_share">系统分享</string>
    <string name="share_txt">分享</string>
    <string name="shoukuan_code">收款码</string>
    <string name="shoukuan_copy_url">复制收款地址</string>
    <string name="trade_sign_title">转账</string>
    <string name="trade_no_money">当前账号暂无余额，无法进行转账</string>
    <string name="trade_wrong_data">交易异常</string>
    <string name="trade_success">转账成功</string>
    <string name="trade_input_wallet_address">请输入钱包地址</string>
    <string name="trade_input_wallet_num">请输入转账数量</string>
    <string name="trade_to_wallet_address">收款人钱包地址</string>
    <string name="trade_to_wallet_address_two">请输入地址</string>
    <string name="trade_money_num">转账金额</string>
    <string name="trade_money_num_two">请输入转账金额</string>
    <string name="trade_select_corn">选择币种</string>
    <string name="trade_next_step">下一步</string>
    <string name="set_title">设置</string>
    <string name="set_language">语言</string>
    <string name="set_update_check">检查更新</string>
    <string name="set_language_chinese">中文</string>
    <string name="set_language_english">英文</string>
    <string name="set_select_language">选择语言</string>
    <string name="login_out">退出</string>
    <string name="lead_in_title">导入账户</string>
    <string name="lead_into_wallet">导入钱包</string>
    <string name="lead_in_zjc_notice">请输入账户的助记词（12个英文单词），按空格隔开</string>
    <string name="lead_in_zjc_notice_2">助记单词 (使用空格分隔)</string>
    <string name="lead_in_account_name">钱包名字</string>
    <string name="lead_in_input_name">请设置钱包名字</string>
    <string name="lead_in_set_pwd">设置密码</string>
    <string name="lead_in_sure_pwd">请输入密码</string>
    <string name="lead_in_begin_import">开始导入</string>
    <string name="lead_in_check_private_key">请检查您的私钥</string>
    <string name="lead_in_copy_private_key">粘贴私钥（Private Key）至输入框内</string>
    <string name="lead_in_two_pwd">确认密码</string>
    <string name="zjc_title">你的钱包助记词</string>
    <string name="zjc_notice_sign">强烈建议您将助记词抄写在纸上并保存在只有你知道的安全地方，任何人得到助记词都可以消费您的数字资产</string>
    <string name="zjc_remeber_sign">助记词用于恢复你的钱包，丢失他们你将永远失去钱包</string>
    <string name="zjc_long_copy">长按下方助记词，可复制到剪切板</string>
    <string name="zjc_beifen_title">备份助记词</string>
    <string name="zjc_check_fail">验证失败，请检查备份</string>
    <string name="zjc_check_successs">校验成功</string>
    <string name="zjc_sure_view">确认你的助记词</string>
    <string name="zjc_click_in_order">请按顺序点击助记词，以确保你的备份助记词正确</string>
    <string name="sure_sure">确定</string>
    <string name="wallet_create_title">创建钱包</string>
    <string name="wallet_create_xieyi">请阅读并同意隐私协议</string>
    <string name="wallet_create_sign_name">请填写钱包名称</string>
    <string name="wallet_create_sign_pwd">请填写钱包密码</string>
    <string name="wallet_create_sign_repeat_pwd">请填写钱包重复密码</string>
    <string name="wallet_create_sign_pwd_not">密码与重复密码不相同</string>
    <string name="wallet_pwd_notice">密码用于保护私钥和交易授权，强度非常重要</string>
    <string name="wallet_remember_notice">BIW不存储密码，也无法帮您找回，请务必牢记</string>
    <string name="wallet_name">钱包名称</string>
    <string name="wallet_pwd">密码</string>
    <string name="wallet_pwd_six">六位及以上密码</string>
    <string name="wallet_repeat_pwd_six">重复六位及以上密码</string>
    <string name="wallet_repeat_pwd">重复密码</string>
    <string name="wallet_xieyi"> 我已经仔细阅读并同意</string>
    <string name="wallet_xieyi_content">《服务及隐私条款》</string>
    <string name="wallet_xieyi_content_two">服务及隐私条款</string>
    <string name="load_data">加载中</string>
    <string name="loading_wallet_tip">导入钱包中…</string>
    <string name="loading_wallet_sign_two">导入钱包</string>
    <string name="universal_text_typeface">PingFangRegular</string>
    <string name="universal_text_typeface_bold">PingFangBold</string>
    <string name="wallet_first_view">人类第一次尝试用一种永续的方式\n让人类科技进行自我复制繁殖</string>
    <string name="create_aacoutn_view">创建账户</string>
    <string name="about_us_title">关于我们</string>
    <string name="about_us_content">  BIW（BITWORLD）区块链网络是一个在以太坊和比特币网络上利用layer2层技术进行区块链网络扩容的解决方案。BIW在BVW 480000区块正式开启BIW网络硬分叉，BIW硬分叉网络主要工作将在比特币和以太坊网络中建立一条layer2层的区块链网络来降低BTC 和ETH结算的成本，当用户在比特币和以太坊小额交易转账时，可以选择使用BIW layer2网络来进行结算，成本仅是原来成本的1%，BIW开发者社区致力于在完全去中心化的前提下，不断的探索layer2 layer3在dapp应用中的开发和实践.</string>
    <string name="help_title">使用帮助</string>
    <string name="del_wallet_fail">删除失败</string>
    <string name="no_data">暂无相关数据</string>
    <string name="no_data_two">暂无数据~</string>
    <string name="msg_receive_sign">接收方:</string>
    <string name="dialog_success_sign">已提交给矿工，确认中！</string>
    <string name="dialog_fail_sign">转账失败</string>
    <string name="update_compare_sign">当前已是最新版本</string>
    <string name="trade_left_money_val">可用余额</string>
    <string name="add_contact_complete">完成</string>
    <string name="add_contact_remark_sign">备注内容不能超过十个字符</string>
    <string name="add_contack_people_sign">备注</string>
    <string name="add_contack_wrong_wallet_address">钱包地址不合法</string>
    <string name="add_contack_address_success">恭喜你！新建完成</string>
    <string name="add_contack_address_fail">新建失败</string>
    <string name="add_contack_create_new_people_title">新建联系人</string>
    <string name="add_contack__people_right">新建</string>
    <string name="add_contack__people_title">联系人</string>
    <string name="add_contack_people_item_name">未定义</string>
    <string name="msg_center_list_title">消息中心</string>
    <string name="trade_beizhu_notice">备注内容太长，不要超过30个字符</string>
    <string name="language">语言</string>
    <string name="follow_the_system">跟随系统</string>
    <string name="create_wallet_sign_content">生成钱包</string>
    <string name="manage">管理</string>
    <string name="back_up_wallet_private_key">备份私钥</string>
    <string name="back_up_wallet_walletsign">备份钱包</string>
    <string name="view_backup_details_tutorial">查看备份详细教程</string>
    <string name="create_wallet_last_step">最后一步：立即备份你的钱包私钥</string>
    <string name="create_wallet_last_step_two">最后一步：立即备份你的钱包</string>
    <string name="create_wallet_last_notice_sign">直接复制粘贴钱包私钥文件内容至输入框。或者通过生成私钥内容的二维码，扫描录入。</string>
    <string name="public_key">公钥</string>
    <string name="community_desc1">宇宙的诞生 便有着生生不息的力量
        \nBIW的永续经营理念正是效仿宇宙永恒的法则
        \nBIW将以宇宙永恒的理念
        \n在全球范围内开启【复活者计划】
        \n首批2亿美金“梦想启动金”帮助所有失败投资者。
    </string>
    <string name="community_desc2">加入【复活者计划】</string>
    <string name="community_desc3">通过BIW已注册的会员报备，需要至少10名成员同时报名，提交相关资料经审核通过并激活BIW买入协议以后，BIW则会根据每个投资人投资失败证明/资料，给予个人投资人最高200，000美金的梦想启动金。每个加入【复活者计划】投资人必须开通BID。 </string>
    <string name="community_desc4">【复活者计划】参与流程 </string>
    <string name="community_desc5">
        1、准备自己旧资产的证明。
        \n\n\n2、联系已经注册BIW的用户，至少10人（原团队成员）注册下载BIW，并开通BID。
        \n\n\n3、填写【复活者计划】申请书，并且进入每期的【复活者计划】培训群，进行每期的【复活者计划】专项培训，培训完结以后正式录入【复活者计划】名录。
       \n\n\n4、进入【复活者计划】名录以后，提交BIW收款地址，和资产证明。
        \n\n\n5、对接【复活者计划】团队需要在BIW 内置交易所首次买入价值1万USDT的BIW，用于激活协议。
        \n\n\n6、完成买入BIW协议以后，根据亏损金额给予每人5万美金-20万美金的救赎款。每月1号 5号 10号 15号 20号 25 号进行发放救赎金。
        \n\n\n7、第二日开始并激活【复活者计划】梦想启动金矿池，按照总持币价值10%，进入【复活者计划】梦想启动金矿池，（矿池总金额最多不超过20万美金，当用户的总业绩超过200万美金以后，业绩10%进入矿池的指令将自动消失）。</string>
    <string name="community_desc6">奖金规则： </string>
    <string name="community_desc7">如何激活矿池：
        \n每日新增业绩10%，流入【复活者计划】矿池，激活“【复活者计划】梦想启动金”。
        \n（每个用户梦想启动金最高不超过20万美金，达到20万美金以后，新增业绩10%将不流入【复活者计划】矿池）
    </string>
    <string name="community_desc8">
        \n\n注：【复活者计划】用户需要满足持有至少＞200枚BIW，系统才会开始进行激活矿池流入。
    </string>
    <string name="community_desc9">结算规则： </string>
    <string name="community_desc10">
        【复活者计划】的梦想启动金释放将与BIW每日涨幅进行关联，BIW每日00：10的涨幅百分比，
        将作为【复活者计划】矿池释放的百分比。（涨幅负数不做任何奖励）即当日BIW的涨幅百分比=当日BIW矿池余额释放百分比。
        举例：用户参与了【复活者计划】，今日整个团队新增业绩 100万，则流入【复活者计划】矿池100X10%=10万，今日BIW涨幅5%，
        用户则可以获得10万X5%=5000元【复活者计划】梦想启动金。用户随时可以对释放的梦想启动金发起交易/提现。
    </string>
    <string name="community_desc11">休眠系统： </string>
    <string name="community_desc12">
        【复活者计划】为防止用户操控市场，系统同步会启动休眠系统。
        休眠系统只对【复活者计划】用户体系生效，对正常BIW经济模式用户无效。
        \n休眠系统说明：参与【复活者计划】用户，新增业绩10%可进入复活者计划矿池系统，最多矿池容量≤20万USDT。
        如用户当日总业绩＞历史最高业绩，则新增业绩10%，流入【复活者计划】矿池，根据当日BIW的涨幅百分比释放矿池余额的百分比；
    </string>
    <string name="community_desc13">如用户当日总业绩≤历史最高业绩，则进入休眠状态，
        【复活者计划】矿池将停止释放；当用户总计＞历史最高业绩以后，
        则自动解除休眠状态，按照系统指令进行工作。
    </string>
    <string name="community_desc14">每日业绩统计：（伦敦时间） </string>
    <string name="community_desc15">每日00：00-24：00为业绩统计时间，持币未满24小时将不计入业绩统计
        \n每日00：10为BIW当日涨幅计算时间
        \n第二日12：00为收益发放时间
    </string>
    <string name="zjc_tip">助记词用于恢复钱包或者重置钱包密码，将它准确的抄写到纸上，并存放在只有你知道的安全的地方。</string>
    <string name="zjc_title_tip">抄写下你的钱包助记词</string>
    <string name="input_btw_private_key">请输入您的BIW私钥</string>
    <string name="mingwen_siyao">明文私钥</string>
</resources>