<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#28223D"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@mipmap/bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">


        <include layout="@layout/lay_head_back" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/community_desc1"
                    android:textColor="@color/white"
                    android:textSize="13dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/community_desc2"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/community_desc3"
                    android:textColor="@color/white"
                    android:textSize="13dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/community_desc4"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/community_desc5"
                    android:textColor="@color/white"
                    android:textSize="13dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/community_desc6"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/community_desc7"
                    android:textColor="@color/white"
                    android:textSize="13dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/community_desc8"
                    android:textColor="@color/color_FC6767"
                    android:textSize="13dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/community_desc9"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/community_desc10"
                    android:textColor="@color/white"
                    android:textSize="13dp"
                     />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/community_desc11"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/community_desc12"
                    android:textColor="@color/white"
                    android:textSize="13dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/community_desc13"
                    android:textColor="@color/color_FC6767"
                    android:textSize="13dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/community_desc14"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="32dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/community_desc15"
                    android:textColor="@color/white"
                    android:textSize="13dp" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</RelativeLayout>